examples/should_pass/test_regIndex1.anvil
proc test_regIndex1() {
    reg x:logic[2];
    reg y:logic[4];
    loop {
        {
            if 1'b1 {
                set y[*x] := 1'b1
            } else {
                dprint "Never Taken" ()
            }
        } >>
        if 1'b1 {
            set x := *x + 2'b01
        } else {
            dprint "Never Taken" ();
            cycle 1
        }
    }
}
